# hows-the-serenity

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  biome.json  index.html  package.json  playwright.config.ts  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: CLAUDE.md
.github/workflows/: build.yml
docs/: GLOSSARY.md
docs/context/: history.md
docs/specs/: forecasts.md  hdbscan_condensed_dendrogram.md  impute.md
e2e/: explorer.spec.ts  forecasts.spec.ts  prod-smoke.spec.ts  routes.spec.ts  suburb-click.spec.ts
etl/: __init__.py  __main__.py  cli.py  config.py  diagnostics_gate.py  duckdb_util.py  logging_setup.py  rental_sales_schema.yaml
etl/io/: __init__.py  geojson.py  shapefile.py
etl/steps/: __init__.py  build_cluster_linkage.py  build_lga_hierarchy.py  build_sal_hierarchy.py  build_suburb_mappings.py  extract_cpi.py  extract_isochrones.py  extract_ptv.py  extract_rental_sales.py  extract_sal.py  extract_school_zones.py  forecast_rental_sales.py  impute_coverage.py  publish_commute_hulls.py  publish_lga.py  publish_region_centroids.py  publish_region_h3_cells.py  publish_region_names.py  publish_sal.py  publish_version.py  tile_isochrone.py  tile_layer.py  tile_ptv.py  tile_sal.py  tile_school_zones.py
etl/tests/: test_build_cluster_linkage.py  test_build_exclusion.py  test_build_lga_hierarchy.py  test_build_sal_hierarchy.py  test_cli_smoke.py  test_corroboration.py  test_diagnostics_gate.py  (+7 more)
scripts/: render-e2e-report.ts
src/: App.tsx  CLAUDE.md  index.css  main.tsx  router.tsx  vite-env.d.ts
(+12850 files in other folders)
