[project]
name = "etl"
version = "0.1.0"
description = "Geospatial ETL pipeline for the hows-the-serenity webapp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0",
    "pyogrio>=0.9",
    "shapely>=2.0",
    "pyarrow>=18.0",
    "pandas>=2.2",
    "mercantile>=1.2",
    "mapbox-vector-tile>=2.1",
]

[project.scripts]
etl = "etl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "data", "dist", "node_modules", ".claude"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplifications
    "RUF",          # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["etl"]
exclude = ["^\\.venv/", "^data/", "^dist/", "^node_modules/"]

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "pyogrio.*",
    "shapely.*",
    "pyarrow.*",
    "mercantile",
    "mapbox_vector_tile",
    "mapbox_vector_tile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["etl/tests"]
addopts = "-v --tb=short"
